--- a/Login page/loginpage.html
+++ b/Login page/loginpage.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Login</h2>
+    <h1>Login</h1>
     <form>
-      <label for="username">Username</label>
+      <label for="username"><h2>Username</h2></label>
       <input type="text" id="username" name="username" required />
         <br />
 
-      <label for="password">Password</label>
+      <label for="password"><h2>Password</h2></label>
       <input type="password" id="password" name="password" required />
         <br />
       <button type="submit">Login</button>
